<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2cdcd">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_for"
        android:onClick="clickFor"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_while"
        android:id="@+id/btnfor"
        android:onClick="btn_while"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_caixa"
        android:id="@+id/resultado"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_limpa"
        android:onClick="btn_limpar"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="end|fill" />



</LinearLayout>