<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fabricadeprogramador.myapplication.MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto"
        android:text="@string/digite"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        android:id="@+id/btn01"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn02"
        android:layout_alignTop="@+id/btn01"
        android:layout_toLeftOf="@+id/btn01"
        android:layout_toStartOf="@+id/btn01"
        android:text="@string/btn_03"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sw_rd"
        android:id="@+id/btn_switch_radio"
        android:layout_below="@+id/btn01"
        android:layout_alignLeft="@+id/btn02"
        android:layout_alignStart="@+id/btn02" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Barra de status"
        android:id="@+id/barrinha"
        android:layout_alignTop="@+id/btn_switch_radio"
        android:layout_toRightOf="@+id/btn_switch_radio"
        android:layout_toEndOf="@+id/btn_switch_radio" />
</RelativeLayout>
